<resources>
    <string name="app_name">Intellisoft</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="next_of_kin">Next of Kin</string>
    <string name="save">Save</string>
    <string name="demographic">Demographic Details</string>
    <string name="name">Name</string>
</resources>
